#1723 Some dark mode styling issues (#1724)

--- a/canvas_modules/common-canvas/src/common-canvas/svg-canvas-d3.scss
+++ b/canvas_modules/common-canvas/src/common-canvas/svg-canvas-d3.scss
@@ -123,7 +123,7 @@ $link-highlight-color: $support-04;
 	// Supress the default focus highlighting with non-carbon color and round corners.
 	outline: none;
 	// Add our own focus highlighting with our own color and square corners
-	box-shadow: 0 0 0 2px $interactive-01;
+	box-shadow: 0 0 0 2px $interactive-03;
 }
 
 /* Pull-out region rectangle used for object selection */
